--- a/board/piksiv3/linux.config
+++ b/board/piksiv3/linux.config
@@ -145,25 +145,27 @@ CONFIG_WATCHDOG=y
 CONFIG_XILINX_WATCHDOG=y
 CONFIG_CADENCE_WATCHDOG=y
 CONFIG_REGULATOR=y
-CONFIG_USB=y
+CONFIG_USB=m
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
-CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_MON=m
+CONFIG_USB_EHCI_HCD=m
 # CONFIG_USB_EHCI_TT_NEWSCHED is not set
-CONFIG_USB_ACM=y
-CONFIG_USB_STORAGE=y
-CONFIG_USB_CHIPIDEA=y
+CONFIG_USB_ACM=m
+CONFIG_USB_STORAGE=m
+CONFIG_USB_CHIPIDEA=m
 CONFIG_USB_CHIPIDEA_UDC=y
 CONFIG_USB_CHIPIDEA_HOST=y
-CONFIG_USB_SERIAL=y
-CONFIG_USB_SERIAL_OPTION=y
+CONFIG_USB_SERIAL=m
+CONFIG_USB_SERIAL_OPTION=m
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_ULPI=y
-CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_XILINX=y
-CONFIG_USB_CONFIGFS=y
+CONFIG_USB_GADGET=m
+CONFIG_USB_GADGET_XILINX=m
+CONFIG_USB_CONFIGFS=m
 CONFIG_USB_CONFIGFS_ACM=y
 CONFIG_USB_CONFIGFS_ECM=y
 CONFIG_USB_CONFIGFS_RNDIS=y
+CONFIG_CONFIGFS_FS=y
 CONFIG_MMC=y
 CONFIG_MMC_SDHCI=m
 CONFIG_MMC_SDHCI_PLTFM=m
@@ -180,6 +182,7 @@ CONFIG_DMADEVICES=y
 CONFIG_PL330_DMA=y
 CONFIG_XILINX_DMA_ENGINES=y
 CONFIG_COMMON_CLK_SI570=y
+CONFIG_EXTCON=y
 CONFIG_MEMORY=y
 CONFIG_IIO=y
 CONFIG_XILINX_XADC=y
