--- a/Config.in
+++ b/Config.in
@@ -59,3 +59,4 @@ source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/libsettings/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/metrics_daemon/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/resource_monitor/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/cmph/Config.in"
+source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/bcm_wrapper/Config.in"
