Use xilinx kernel v2017.4
Fixup tty driver patch

Re-enable rpmsg module

Memory allocation for remoteproc has changed

kernel patch, declard coherent DMA ELF carveout region

Patch not needed

Lots of patches to make remoteproc work

Temp hack to find private firmware image

BAD: delays boot process slightly so SPI  flash actually works

Typo

Use private firmware PR artifact

Remove old patches, backport xilinx devcfg

Upgrade to xilinx-v2018.1 (linux 4.10)

Remove debug messages

Use 2018.3 kernel

Remove old xilinx devcfg driver patch

Remove debug messages

Reinstate patch header

--- a/board/piksiv3/linux.config
+++ b/board/piksiv3/linux.config
@@ -208,3 +208,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_FTRACE is not set
+CONFIG_RPMSG=m
+CONFIG_RPMSG_VIRTIO=m
+CONFIG_REMOTEPROC=m
+CONFIG_ZYNQ_REMOTEPROC=m
