--- a/board/piksiv3/piksiv3.dtsi
+++ b/board/piksiv3/piksiv3.dtsi
@@ -13,9 +13,15 @@
 /include/ "zynq-7000.dtsi"
 
 / {
+  amba {
+    elf_ddr_0: ddr@1b000000 {
+      compatible = "mmio-sram";
+      reg = <0x1b000000 0x04000000>;
+    };
+  };
+
   remoteproc0: remoteproc@0 {
     compatible = "xlnx,zynq_remoteproc";
-    reg = <0x1B000000 0x04000000>;
     interrupt-parent = <&intc>;
     interrupts =
         <0  7 4>,                                 /* ADC */
@@ -28,9 +34,9 @@
         <0 33 1>, <0 34 1>, <0 35 1>, <0 36 1>,   /* FPGA 4-7 */
         <0 52 1>, <0 53 1>, <0 54 1>, <0 55 1>,   /* FPGA 8-11 */
         <0 56 1>, <0 57 1>, <0 58 1>, <0 59 1>;   /* FPGA 12-15 */
-    firmware = "piksi_firmware.elf";
     vring0 = <15>;
     vring1 = <14>;
+    srams = <&elf_ddr_0>;
   };
 };
 
