Update sbp router rules

--- a/package/sbp_protocol/src/sbp_router.yml
+++ b/package/sbp_protocol/src/sbp_router.yml
@@ -70,19 +70,20 @@ ports:
     forwarding_rules:
       - dst_port: SBP_PORT_FIRMWARE
         filters:
-          - { action: ACCEPT, prefix: [0x55, 0xA0, 0x00] } # Settings write
           - { action: ACCEPT, prefix: [0x55, 0xA5, 0x00] } # Settings read response
           - { action: ACCEPT, prefix: [0x55, 0xAF, 0x00] } # Settings write response
+          - { action: ACCEPT, prefix: [0x55, 0xAF, 0x01] } # Settings register response
           - { action: REJECT }
       - dst_port: SBP_PORT_EXTERNAL
         filters:
           - { action: REJECT, prefix: [0x55, 0xA0, 0x00] } # Settings write
+          - { action: REJECT, prefix: [0x55, 0xAF, 0x01] } # Settings register response
           - { action: ACCEPT }
       - dst_port: SBP_PORT_SETTINGS_CLIENT
         filters:
-          - { action: ACCEPT, prefix: [0x55, 0xA0, 0x00] } # Settings write
           - { action: ACCEPT, prefix: [0x55, 0xA5, 0x00] } # Settings read response
           - { action: ACCEPT, prefix: [0x55, 0xAF, 0x00] } # Settings write response
+          - { action: ACCEPT, prefix: [0x55, 0xAF, 0x01] } # Settings register response
           - { action: REJECT }
 
   - name: SBP_PORT_EXTERNAL
