ultrascale: Add U-Boot config

--- a/configs/piksiv4_defconfig
+++ b/configs/piksiv4_defconfig
@@ -81,7 +81,8 @@ BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/Xilinx/u-boot-xlnx"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="xilinx-v2018.3"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="avnet_ultra96_rev1"
+BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv4/uboot.config"
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_ELF=y
 BR2_PACKAGE_HOST_DTC=y
