Use Matt's rpmsg_piksi and reenable package.

--- a/configs/piksiv4_defconfig
+++ b/configs/piksiv4_defconfig
@@ -93,6 +93,7 @@ BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/
 BR2_TARGET_UBOOT_FORMAT_ELF=y
 BR2_PACKAGE_HOST_DTC=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_RPMSG_PIKSI=y
 BR2_PACKAGE_ENDPOINT_ROUTER=y
 BR2_PACKAGE_ENDPOINT_ADAPTER=y
 BR2_PACKAGE_SBP_SETTINGS_DAEMON=y
