Compile new fpga-manager modules
Allow custom fpga manager image loaders

Use new fpga-manager framework to boot fpga

Add comments explaining FPGA image sync word

Compile fpga manager in kernel, not as module

Reimplement FPGA programming retry login

Caution, I don't trust the xilinx fpga module

Remove debug messages

--- a/board/piksiv3/linux.config
+++ b/board/piksiv3/linux.config
@@ -128,7 +128,6 @@ CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_SERIAL_XILINX_PS_UART=y
 CONFIG_SERIAL_XILINX_PS_UART_CONSOLE=y
 # CONFIG_HW_RANDOM is not set
-CONFIG_XILINX_DEVCFG=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_CADENCE=y
@@ -212,3 +211,5 @@ CONFIG_RPMSG=y
 CONFIG_RPMSG_VIRTIO=y
 CONFIG_REMOTEPROC=y
 CONFIG_ZYNQ_REMOTEPROC=y
+CONFIG_FPGA=y
+CONFIG_FPGA_MGR_ZYNQ_FPGA=y
