--- a/board/piksiv3/linux.config
+++ b/board/piksiv3/linux.config
@@ -128,7 +128,6 @@ CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_SERIAL_XILINX_PS_UART=y
 CONFIG_SERIAL_XILINX_PS_UART_CONSOLE=y
 # CONFIG_HW_RANDOM is not set
-CONFIG_XILINX_DEVCFG=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_CADENCE=y
@@ -212,3 +211,5 @@ CONFIG_RPMSG=m
 CONFIG_RPMSG_VIRTIO=m
 CONFIG_REMOTEPROC=m
 CONFIG_ZYNQ_REMOTEPROC=m
+CONFIG_FPGA=m
+CONFIG_FPGA_MGR_ZYNQ_FPGA=m
