SBP_MSG_SETTINGS_REGISTER_RESP [ESD-1012] (#1134)
* Modularize internal setting_t

* Rename file containing SBP callbacks

* Update unit test to use setting_t

* Add more unit tests

* Use SBP_MSG_SETTINGS_REGISTER_RESP

* Engineering packages

* Update sbp router rules

* clang-format

* Update to libsbp v2.4.9

* Update to libsettings v0.1.8

--- a/package/sbp_settings_daemon/sbp_settings_daemon/src/Makefile
+++ b/package/sbp_settings_daemon/sbp_settings_daemon/src/Makefile
@@ -1,11 +1,12 @@
 TARGET=sbp_settings_daemon
 SOURCES= \
 	main.c \
-	settings.c \
+	setting.c \
+	settings_sbp_cb.c \
 
 LIBS=-luv -lsbp -lpiksi -lsettings
 
-CFLAGS+=-std=gnu11
+CFLAGS+=-std=gnu11 -I../include
 ARFLAGS=rcs	$(LTO_PLUGIN)
 
 CROSS=
