--- a/configs/piksiv3_defconfig
+++ b/configs/piksiv3_defconfig
@@ -120,3 +120,4 @@ BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_PFW_WELCOME=y
+BR2_PACKAGE_J1939_PROTOCOL=y
