--- a/package/starling_daemon/overlay/etc/endpoint_router/sbp_router_starling.yml
+++ b/package/starling_daemon/overlay/etc/endpoint_router/sbp_router_starling.yml
@@ -38,11 +38,11 @@ ports:
           - { action: REJECT, prefix: [0x55, 0xAC, 0x00] } # File remove
           - { action: REJECT, prefix: [0x55, 0xAD, 0x00] } # File write
           - { action: ACCEPT }
-      - dst_port: SBP_PORT_SKYLARK
-        filters:
-          - { action: ACCEPT, prefix: [0x55, 0x0A, 0x02] } # Publish: SBP MSG_POS_LLH
-          - { action: ACCEPT, prefix: [0x55, 0xFF, 0xFF] } # Publish: SBP MSG_HEARTBEAT
-          - { action: REJECT }
+#      - dst_port: SBP_PORT_SKYLARK
+#        filters:
+#          - { action: ACCEPT, prefix: [0x55, 0x0A, 0x02] } # Publish: SBP MSG_POS_LLH
+#          - { action: ACCEPT, prefix: [0x55, 0xFF, 0xFF] } # Publish: SBP MSG_HEARTBEAT
+#          - { action: REJECT }
       - dst_port: SBP_PORT_NAV_DAEMON # This list sends only what Smoothpose needs at present.
         filters:
           - { action: ACCEPT, prefix: [0x55, 0x0A, 0x02] } # MSG_POS_LLH  **Smoothpose Change**
@@ -197,25 +197,25 @@ ports:
           - { action: ACCEPT, prefix: [0x55, 0xAF, 0x00] } # Settings write response
           - { action: REJECT }
 
-  - name: SBP_PORT_SKYLARK
-    metric: "sbp/skylark"
-    pub_addr: "ipc:///var/run/sockets/skylark.pub"
-    sub_addr: "ipc:///var/run/sockets/skylark.sub"
-    forwarding_rules:
-      - dst_port: SBP_PORT_FIRMWARE
-        filters:
-          - { action: ACCEPT, prefix: [0x55, 0x44, 0x00] } # SBP_MSG_BASE_POS_LLH
-          - { action: ACCEPT, prefix: [0x55, 0x48, 0x00] } # SBP_MSG_BASE_POS_ECEF
-          - { action: ACCEPT, prefix: [0x55, 0x4A, 0x00] } # SBP_MSG_OBS
-          - { action: ACCEPT, prefix: [0x55, 0x8A, 0x00] } # SBP_MSG_EPHEMERIS_GPS
-          - { action: ACCEPT, prefix: [0x55, 0x8B, 0x00] } # SBP_MSG_EPHEMERIS_GLO
-          - { action: ACCEPT, prefix: [0x55, 0x84, 0x00] } # SBP_MSG_EPHEMERIS_SBAS
-          - { action: ACCEPT, prefix: [0x55, 0x75, 0x00] } # SBP_MSG_GLO_BIASES
-          - { action: REJECT }
-      - dst_port: SBP_PORT_NMEA_BRIDGE
-        filters:
-          - { action: ACCEPT, prefix: [0x55, 0x4A, 0x00] } # SBP_MSG_OBS
-          - { action: REJECT }
+#  - name: SBP_PORT_SKYLARK
+#    metric: "sbp/skylark"
+#    pub_addr: "ipc:///var/run/sockets/skylark.pub"
+#    sub_addr: "ipc:///var/run/sockets/skylark.sub"
+#    forwarding_rules:
+#      - dst_port: SBP_PORT_FIRMWARE
+#        filters:
+#          - { action: ACCEPT, prefix: [0x55, 0x44, 0x00] } # SBP_MSG_BASE_POS_LLH
+#          - { action: ACCEPT, prefix: [0x55, 0x48, 0x00] } # SBP_MSG_BASE_POS_ECEF
+#          - { action: ACCEPT, prefix: [0x55, 0x4A, 0x00] } # SBP_MSG_OBS
+#          - { action: ACCEPT, prefix: [0x55, 0x8A, 0x00] } # SBP_MSG_EPHEMERIS_GPS
+#          - { action: ACCEPT, prefix: [0x55, 0x8B, 0x00] } # SBP_MSG_EPHEMERIS_GLO
+#          - { action: ACCEPT, prefix: [0x55, 0x84, 0x00] } # SBP_MSG_EPHEMERIS_SBAS
+#          - { action: ACCEPT, prefix: [0x55, 0x75, 0x00] } # SBP_MSG_GLO_BIASES
+#          - { action: REJECT }
+#      - dst_port: SBP_PORT_NMEA_BRIDGE
+#        filters:
+#          - { action: ACCEPT, prefix: [0x55, 0x4A, 0x00] } # SBP_MSG_OBS
+#          - { action: REJECT }
 
   - name: SBP_PORT_NAV_DAEMON  # Entire Section Smoothpose Change**
     metric: "sbp/nav_daemon"
