--- a/configs/piksiv3_defconfig
+++ b/configs/piksiv3_defconfig
@@ -122,3 +122,4 @@ BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_HEADING_FORWARDER=y
 BR2_PACKAGE_J1939_PROTOCOL=y
+BR2_PACKAGE_SBP_J1939_BRIDGE=y
