--- a/configs/piksiv3_defconfig
+++ b/configs/piksiv3_defconfig
@@ -121,3 +121,4 @@ BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_J1939_PROTOCOL=y
+BR2_PACKAGE_SBP_J1939_BRIDGE=y
