--- a/package/sbp_protocol/src/sbp_router.yml
+++ b/package/sbp_protocol/src/sbp_router.yml
@@ -61,6 +61,7 @@ ports:
           - { action: ACCEPT, prefix: [0x55, 0x08, 0x02] } # MSG_DOPS
           - { action: ACCEPT, prefix: [0x55, 0x0F, 0x02] } # MSG_BASELINE_HEADING
           - { action: ACCEPT, prefix: [0x55, 0x10, 0x02] } # MSG_AGE_CORRECTIONS
+          - { action: ACCEPT, prefix: [0x55, 0x00, 0x88] } # MSG_WRAPPED_NMEA_GSV_DEP
           - { action: REJECT }
 
   - name: SBP_PORT_SETTINGS_DAEMON
