--- a/package/sbp_j1939_bridge/Config.in
+++ b/package/sbp_j1939_bridge/Config.in
@@ -3,3 +3,4 @@ config BR2_PACKAGE_SBP_J1939_BRIDGE
 	select BR2_PACKAGE_LIBUV
 	select BR2_PACKAGE_LIBSBP
 	select BR2_PACKAGE_LIBPIKSI
+	select BR2_PACKAGE_LIBSETTINGS
