add extra adapter logic to allow both j1939 and sbp

--- a/package/j1939_protocol/src/j1939_router.yml
+++ b/package/j1939_protocol/src/j1939_router.yml
@@ -2,6 +2,7 @@
 name: J1939_ROUTER
 ports:
   - name: J1939_PORT_INTERNAL
+    metric: "j1939/internal"
     pub_addr: "ipc:///var/run/sockets/j1939_internal.pub"
     sub_addr: "ipc:///var/run/sockets/j1939_internal.sub"
     forwarding_rules:
@@ -10,6 +11,7 @@ ports:
           - { action: ACCEPT }
 
   - name: J1939_PORT_EXTERNAL
+    metric: "j1939/external"
     pub_addr: "ipc:///var/run/sockets/j1939_external.pub"
     sub_addr: "ipc:///var/run/sockets/j1939_external.sub"
     forwarding_rules:
