--- a/Config.in
+++ b/Config.in
@@ -60,3 +60,4 @@ source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/metrics_daemon/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/resource_monitor/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/cmph/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/bcm_wrapper/Config.in"
+source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/heading_forwarder/Config.in"
