--- a/configs/host_defconfig
+++ b/configs/host_defconfig
@@ -78,3 +78,4 @@ BR2_PACKAGE_PROCPS_NG=y
 BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_CMPH=y
+BR2_PACKAGE_HEADING_FORWARDER=y
