--- a/configs/piksiv3_internal_defconfig
+++ b/configs/piksiv3_internal_defconfig
@@ -123,3 +123,5 @@ BR2_PACKAGE_PIKSI_INS_REF=y
 BR2_PACKAGE_SAMPLE_DAEMON=y
 BR2_PACKAGE_STARLING_DAEMON=y
 BR2_PACKAGE_PIKSI_DEV_TOOLS=y
+BR2_PACKAGE_CMPH=y
+BR2_PACKAGE_HEADING_FORWARDER=y
