Add SDK build variant
+ Clean-up make targets and add an image-sdk target

+ Add an "SDK" build variant for tagged builds

+ Add a minimal docker file (which should have no access to
  credentials) in order to build an "SDK" image.

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,12 +80,22 @@ matrix:
         - ./scripts/travis.sh after_success
       after_failure:
         - ./scripts/travis.sh after_failure
+    
+    # Toolcahin build: builds normally, but also builds the
+    #   SDK sample app, piksi_ins_ref, and exports a buidlroot
+    #   toolchain
+    - env:
+        - TRAVIS_TARGET=toolchain
+      script:
+        - ./scripts/travis.sh script
+      after_success:
+        - ./scripts/travis.sh after_success
+      after_failure:
+        - ./scripts/travis.sh after_failure
 
-    # Normal build + SDK sample app + piksi_ins_ref
+    # Creates a build with SSH enabled, no INS, no private artifacts
     - env:
         - TRAVIS_TARGET=sdk
-        - BR2_BUILD_SAMPLE_DAEMON=y
-        - BR2_BUILD_PIKSI_INS_REF=y
       script:
         - ./scripts/travis.sh script
       after_success:
