--- a/.travis.yml
+++ b/.travis.yml
@@ -96,6 +96,7 @@ matrix:
     # Creates a build with SSH enabled, no INS, no private artifacts
     - env:
         - TRAVIS_TARGET=sdk
+        - FORCE_SDK_BUILD=y
       script:
         - ./scripts/travis.sh script
       after_success:
