--- a/board/piksiv3/linux.config
+++ b/board/piksiv3/linux.config
@@ -206,6 +206,11 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
+CONFIG_RCU_EXPERT=y
+CONFIG_RCU_FANOUT=32
+CONFIG_RCU_FANOUT_LEAF=16
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_BOOST_DELAY=500
 # CONFIG_FTRACE is not set
 CONFIG_RPMSG=y
 CONFIG_RPMSG_VIRTIO=y
