--- a/scripts/Dockerfile.sdk
+++ b/scripts/Dockerfile.sdk
@@ -39,8 +39,7 @@ ENV PATH=/opt/cmake/bin:${PATH}
 WORKDIR /work
 
 RUN \
-  git clone --single-branch -b ${branch} \
-    --recursive --shallow-submodules --depth=1 \
+  git clone --single-branch -b ${branch} --recursive --depth=1 \
     https://github.com/swift-nav/piksi_buildroot.git \
     .
 
