--- a/scripts/Dockerfile.sdk
+++ b/scripts/Dockerfile.sdk
@@ -1,11 +1,13 @@
 FROM ubuntu:bionic
 
-ARG branch=master
+ARG branch
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
 
-RUN apt-get update
+RUN \
+  echo '>>> Updating packages...' && \
+  apt-get update
 
 ENV BUILDROOT_MIN_PACKAGES \
   build-essential \
@@ -23,6 +25,7 @@ ENV BUILDROOT_MIN_PACKAGES \
   ccache
 
 RUN \
+  echo '>>> Installing packages needed to run buildroot...' && \
   apt-get --no-install-recommends -y --force-yes upgrade && \
   apt-get --no-install-recommends -y --force-yes install \
     ${BUILDROOT_MIN_PACKAGES}
@@ -30,20 +33,27 @@ RUN \
 # Manually install recent cmake so buildroot doesn't
 #   try to install its own.
 ENV CMAKE_INSTALLER https://cmake.org/files/v3.10/cmake-3.10.3-Linux-x86_64.sh 
-RUN wget -O /tmp/cmake_installer.sh ${CMAKE_INSTALLER} && \
-    mkdir -p /opt/cmake && \
-    bash /tmp/cmake_installer.sh --skip-license --prefix=/opt/cmake
+RUN \
+  echo '>>> Fetching and installing cmake...' && \
+  wget -O /tmp/cmake_installer.sh ${CMAKE_INSTALLER} && \
+  mkdir -p /opt/cmake && \
+  bash /tmp/cmake_installer.sh --skip-license --prefix=/opt/cmake
 
 ENV PATH=/opt/cmake/bin:${PATH}
 
 WORKDIR /work
 
 RUN \
+  echo '>>> Cloning piksi_buildroot (branch: ${branch})...' && \
   git clone --single-branch -b ${branch} --recursive --depth=100 \
     https://github.com/swift-nav/piksi_buildroot.git \
     .
 
-RUN make firmware
-RUN make image-sdk
+RUN \
+  echo '>>> Fetching binary artifacts...' && \
+  make firmware && \
+  echo '>>> Building SDK image...' && \
+  make image-sdk && \
+  echo '>>> Done!'
 
 # vim: ft=dockerfile:
