--- a/package/sbp_protocol/src/sbp_router.yml
+++ b/package/sbp_protocol/src/sbp_router.yml
@@ -93,9 +93,6 @@ ports:
     sub_addr: "ipc:///var/run/sockets/external.sub"
     forwarding_rules:
 
-      - dst_port: SBP_PORT_FILEIO_EXTERNAL
-        skip_framer: true
-
       - dst_port: SBP_PORT_FIRMWARE
         filters:
           - { action: REJECT, prefix: [0x55, 0xA8, 0x00] } # File read
@@ -139,13 +136,15 @@ ports:
         filters:
           - { action: ACCEPT }
 
+## TODO: delete me ##
   - name: SBP_PORT_FILEIO_EXTERNAL
     metric: "sbp/fileio_ex"
     pub_addr: "ipc:///var/run/sockets/fileio_external.pub"
     sub_addr: "ipc:///var/run/sockets/fileio_external.sub"
     forwarding_rules:
       - dst_port: SBP_PORT_EXTERNAL
-        skip_framer: true
+        filters:
+          - { action: ACCEPT }
 
   - name: SBP_PORT_INTERNAL
     metric: "sbp/internal"
