SDK image build variant [ESD-243] (#1187)
Creates a build variant which for an "SDK image" which contains SSH access, but no INS, and no image encryption (and no ability to decrypt protected images).

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,14 +32,14 @@ matrix:
         - ./scripts/travis.sh after_failure
 
     # Check if docker base image needs to be re-built
-    - env:
-        - TRAVIS_TARGET=docker
-      script:
-        - ./scripts/travis.sh script
-      after_success:
-        - ./scripts/travis.sh after_success
-      after_failure:
-        - ./scripts/travis.sh after_failure
+#    - env:
+#        - TRAVIS_TARGET=docker
+#      script:
+#        - ./scripts/travis.sh script
+#      after_success:
+#        - ./scripts/travis.sh after_success
+#      after_failure:
+#        - ./scripts/travis.sh after_failure
 
     # Normal image build
     - env:
@@ -72,8 +72,20 @@ matrix:
         - ./scripts/travis.sh after_failure
 
     # Nano image build, for Starling-EVK
+#    - env:
+#        - TRAVIS_TARGET=nano
+#      script:
+#        - ./scripts/travis.sh script
+#      after_success:
+#        - ./scripts/travis.sh after_success
+#      after_failure:
+#        - ./scripts/travis.sh after_failure
+    
+    # Toolcahin build: builds normally, but also builds the
+    #   SDK sample app, piksi_ins_ref, and exports a buildroot
+    #   toolchain
     - env:
-        - TRAVIS_TARGET=nano
+        - TRAVIS_TARGET=toolchain
       script:
         - ./scripts/travis.sh script
       after_success:
@@ -81,11 +93,9 @@ matrix:
       after_failure:
         - ./scripts/travis.sh after_failure
 
-    # Normal build + SDK sample app + piksi_ins_ref
+    # Creates a build with SSH enabled, no INS, no private artifacts
     - env:
         - TRAVIS_TARGET=sdk
-        - BR2_BUILD_SAMPLE_DAEMON=y
-        - BR2_BUILD_PIKSI_INS_REF=y
       script:
         - ./scripts/travis.sh script
       after_success:
