--- a/configs/piksiv3_unprotected_defconfig
+++ b/configs/piksiv3_unprotected_defconfig
@@ -117,4 +117,5 @@ BR2_PACKAGE_OTA_DAEMON=y
 BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_PFW_WELCOME=y
+BR2_PACKAGE_PIKSI_APPS=y
 BR2_PACKAGE_RELEASE_LOCKDOWN=y
