--- a/package/piksi_ins/Config.in
+++ b/package/piksi_ins/Config.in
@@ -6,3 +6,4 @@ config BR2_PACKAGE_PIKSI_INS
   select BR2_PACKAGE_LIBSWIFTNAV
   select BR2_PACKAGE_EIGEN
   select BR2_PACKAGE_EIGEN_UNSUPPORTED_MODULES
+	select BR2_PACKAGE_PIKSI_APPS
