--- a/package/sbp_protocol/src/sbp_router.yml
+++ b/package/sbp_protocol/src/sbp_router.yml
@@ -62,6 +62,8 @@ ports:
           - { action: ACCEPT, prefix: [0x55, 0x08, 0x02] } # MSG_DOPS
           - { action: ACCEPT, prefix: [0x55, 0x0F, 0x02] } # MSG_BASELINE_HEADING
           - { action: ACCEPT, prefix: [0x55, 0x10, 0x02] } # MSG_AGE_CORRECTIONS
+          - { action: ACCEPT, prefix: [0x55, 0x97, 0x00] } # MSG_SV_AZ_EL
+          - { action: ACCEPT, prefix: [0x55, 0x61, 0x00] } # MSG_MEASUREMENT_STATE
           - { action: REJECT }
 
   - name: SBP_PORT_SETTINGS_DAEMON
