--- a/package/piksi_ins/Config.in
+++ b/package/piksi_ins/Config.in
@@ -5,3 +5,4 @@ config BR2_PACKAGE_PIKSI_INS
   select BR2_PACKAGE_LIBPIKSI
   select BR2_PACKAGE_EIGEN
   select BR2_PACKAGE_EIGEN_UNSUPPORTED_MODULES
+	select BR2_PACKAGE_PIKSI_APPS
