--- a/package/sbp_protocol/src/sbp_router_smoothpose.yml
+++ b/package/sbp_protocol/src/sbp_router_smoothpose.yml
@@ -73,6 +73,8 @@ ports:
           - { action: ACCEPT, prefix: [0x55, 0x08, 0x02] } # MSG_DOPS
           - { action: ACCEPT, prefix: [0x55, 0x0F, 0x02] } # MSG_BASELINE_HEADING
           - { action: ACCEPT, prefix: [0x55, 0x10, 0x02] } # MSG_AGE_CORRECTIONS
+          - { action: ACCEPT, prefix: [0x55, 0x97, 0x00] } # MSG_SV_AZ_EL
+          - { action: ACCEPT, prefix: [0x55, 0x61, 0x00] } # MSG_MEASUREMENT_STATE
           - { action: REJECT }
 
   - name: SBP_PORT_SETTINGS_DAEMON
@@ -231,7 +233,7 @@ ports:
           - { action: REJECT }
       - dst_port: SBP_PORT_NMEA_BRIDGE
         filters:
-          - { action: ACCEPT, prefix: [0x55, 0x0A, 0x02] } # MSG_POS_LLH
+          - { action: ACCEPT, prefix: [0x55, 0x11, 0x02] } # MSG_POS_LLH_COV
           - { action: ACCEPT, prefix: [0x55, 0x0E, 0x02] } # MSG_VEL_NED
           - { action: REJECT }
 
