--- a/configs/piksiv3_defconfig
+++ b/configs/piksiv3_defconfig
@@ -123,3 +123,4 @@ BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_CMPH=y
+BR2_PACKAGE_WATCHDOG_DAEMON=y
