--- a/board/piksiv3/linux.config
+++ b/board/piksiv3/linux.config
@@ -192,6 +192,7 @@ CONFIG_EXT3_FS_POSIX_ACL=y
 CONFIG_EXT3_FS_SECURITY=y
 CONFIG_F2FS_FS=y
 # CONFIG_DNOTIFY is not set
+CONFIG_FUSE_FS=m
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
