--- a/configs/piksi_nano_defconfig
+++ b/configs/piksi_nano_defconfig
@@ -122,3 +122,5 @@ BR2_PACKAGE_BCM_WRAPPER=y
 BR2_PACKAGE_QUERY_CONFIG=y
 BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_RESOURCE_MONITOR=y
+BR2_PACKAGE_NTFS_3G=y
+BR2_PACKAGE_NTFS_3G_NTFSPROGS=y
