--- a/configs/piksiv3_defconfig
+++ b/configs/piksiv3_defconfig
@@ -121,3 +121,5 @@ BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_CMPH=y
+BR2_PACKAGE_NTFS_3G=y
+BR2_PACKAGE_NTFS_3G_NTFSPROGS=y
