--- a/package/piksi_ins/Config.in
+++ b/package/piksi_ins/Config.in
@@ -3,5 +3,6 @@ config BR2_PACKAGE_PIKSI_INS
   select BR2_PACKAGE_LIBUV
   select BR2_PACKAGE_LIBSBP
   select BR2_PACKAGE_LIBPIKSI
+  select BR2_PACKAGE_LIBSWIFTNAV
   select BR2_PACKAGE_EIGEN
   select BR2_PACKAGE_EIGEN_UNSUPPORTED_MODULES
