Jenkins build with HITL trigger [EO-334] (#1217)
- Use buildroot base created from docker-recipes
- Trigger HITL runs
- Send email and PR notifications

(cherry picked from commit 7459c0aff36baed8c97802c498797c0d3f01514b)

--- a/scripts/Dockerfile.jenkins
+++ b/scripts/Dockerfile.jenkins
@@ -2,20 +2,11 @@
 # so we'll have to hard code it here. Make sure to also update docker_version_tag when updating
 # the tag here.
 
-FROM swiftnav/buildroot-base:2019.03.15
+FROM swiftnav/buildroot-base:2019-04-22
 
 # Add a "jenkins" user with sudo capabilities
 RUN useradd -u 1001 -ms /bin/bash -G sudo jenkins
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
-
-# Use newer ccache to fix issue with parallel cleanup
-RUN cd /tmp && \
-    wget https://www.samba.org/ftp/ccache/ccache-3.4.2.tar.gz && \
-    tar fxvz ccache-3.4.2.tar.gz && \
-    cd ccache-3.4.2 && \
-    ./configure && \
-    make install
-#ENV PATH=/usr/lib/ccache:${PATH}
 
 # Enable 'jenkins' user to clone from github
 USER jenkins
