--- a/configs/piksiv3_sdk_defconfig
+++ b/configs/piksiv3_sdk_defconfig
@@ -1,7 +1,11 @@
 BR2_arm=y
-BR2_cortex_a7=y
-BR2_ARM_FPU_NEON_VFPV4=y
-BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksi_nano/patches"
+BR2_cortex_a9=y
+BR2_ARM_ENABLE_NEON=y
+BR2_ARM_ENABLE_VFP=y
+BR2_ARM_FPU_NEON=y
+BR2_CCACHE=y
+BR2_CCACHE_DIR="$(BR2_EXTERNAL_piksi_buildroot_PATH)/buildroot/output/ccache"
+BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/patches"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
@@ -10,25 +14,29 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_1=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
-BR2_TOOLCHAIN_EXTERNAL_GDB_SERVER_COPY=y
 BR2_TOOLCHAIN_GLIBC_GCONV_LIBS_COPY=y
+BR2_TARGET_OPTIMIZATION="-flto"
+BR2_TARGET_LDFLAGS="-flto"
 BR2_TARGET_GENERIC_HOSTNAME="piksi"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Piksi"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
-BR2_ROOTFS_DEVICE_TABLE="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksi_nano/device_table.txt"
+BR2_ROOTFS_DEVICE_TABLE="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/device_table.txt"
+BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/users_table.txt"
 # BR2_TARGET_GENERIC_GETTY is not set
-BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksi_nano/rootfs-overlay"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksi_nano/post-image.sh"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/rootfs-overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/post_image.sh"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4.14.28"
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git://github.com/Xilinx/linux-xlnx.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="xilinx-v2016.4"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksi_nano/linux.config"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/linux.config"
+BR2_LINUX_KERNEL_APPENDED_UIMAGE=y
 BR2_LINUX_KERNEL_LZ4=y
-BR2_LINUX_KERNEL_DTS_SUPPORT=y
+BR2_LINUX_KERNEL_UIMAGE_LOADADDR="0x00108000"
 BR2_LINUX_KERNEL_USE_CUSTOM_DTS=y
-BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksi_nano/piksi_nano.dts"
-BR2_PACKAGE_LINUX_TOOLS_PERF=y
+BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/piksiv3.dtsi $(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/piksiv3_microzed.dts $(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/piksiv3_prod.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_piksi_buildroot_PATH)/board/piksiv3/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_F2FS_TOOLS=y
@@ -57,7 +65,6 @@ BR2_PACKAGE_LIBCAP=y
 BR2_PACKAGE_LIBCAP_TOOLS=y
 BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_DHCPCD=y
-BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_LRZSZ=y
@@ -69,57 +76,46 @@ BR2_PACKAGE_INOTIFY_TOOLS=y
 BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
+BR2_PACKAGE_PROCPS_NG=y
 BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_UTIL_LINUX_FSCK=y
-BR2_TARGET_ROOTFS_EXT2=y
-BR2_TARGET_ROOTFS_EXT2_4=y
+BR2_TARGET_ROOTFS_INITRAMFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
-BR2_TARGET_UBOOT=y
-BR2_TARGET_UBOOT_BOARDNAME="mx6ul_var_dart_mmc"
-BR2_TARGET_UBOOT_CUSTOM_GIT=y
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/varigit/uboot-imx"
-BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="imx_v2017.03_4.9.11_1.0.0_ga_var01"
-# BR2_TARGET_UBOOT_FORMAT_BIN is not set
-BR2_TARGET_UBOOT_FORMAT_IMG=y
-BR2_TARGET_UBOOT_SPL=y
-BR2_TARGET_UBOOT_SPL_NAME="SPL"
-BR2_PACKAGE_HOST_DOSFSTOOLS=y
-BR2_PACKAGE_HOST_DTC=y
-BR2_PACKAGE_HOST_GENIMAGE=y
-BR2_PACKAGE_HOST_MTOOLS=y
-BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_UBOOT_CUSTOM_CONFIGS="piksiv3_prod_prod piksiv3_prod_failsafe piksiv3_prod_dev"
+BR2_PACKAGE_CMPH=y
+BR2_PACKAGE_LOGROTATE=y
+BR2_PACKAGE_NTFS_3G=y
+BR2_PACKAGE_NTFS_3G_NTFSPROGS=y
+BR2_PACKAGE_COMMON_INIT=y
+BR2_PACKAGE_RPMSG_PIKSI=y
 BR2_PACKAGE_ENDPOINT_ROUTER=y
 BR2_PACKAGE_ENDPOINT_ADAPTER=y
+BR2_PACKAGE_UPGRADE_TOOL=y
 BR2_PACKAGE_SBP_SETTINGS_DAEMON=y
+BR2_PACKAGE_FACTORY_DATA_TOOL=y
 BR2_PACKAGE_PIKSI_SYSTEM_DAEMON=y
 BR2_PACKAGE_SBP_CLI=y
+BR2_PACKAGE_IMAGE_TABLE_TOOL=y
+BR2_PACKAGE_SBP_FILEIO_DAEMON=y
 BR2_PACKAGE_SBP_RTCM3_BRIDGE=y
-BR2_PACKAGE_SBP_NMEA_BRIDGE=y
 BR2_PACKAGE_STANDALONE_FILE_LOGGER=y
 BR2_PACKAGE_NTRIP_DAEMON=y
-BR2_PACKAGE_ORION_DAEMON=y
-BR2_PACKAGE_SAMPLE_DAEMON=y
 BR2_PACKAGE_SBP_PROTOCOL=y
 BR2_PACKAGE_NMEA_DAEMON=y
 BR2_PACKAGE_NMEA_PROTOCOL=y
+BR2_PACKAGE_SBP_NMEA_BRIDGE=y
 BR2_PACKAGE_HEALTH_DAEMON=y
 BR2_PACKAGE_RTCM3_IN_PROTOCOL=y
 BR2_PACKAGE_RTCM3_OUT_PROTOCOL=y
 BR2_PACKAGE_CELL_MODEM_DAEMON=y
+BR2_PACKAGE_CSAC_DAEMON=y
 BR2_PACKAGE_PIKSI_LEDS=y
-BR2_PACKAGE_LLVM_VANILLA=y
-BR2_PACKAGE_PIKSI_INS_REF=y
 BR2_PACKAGE_NETWORK_DAEMON=y
 BR2_PACKAGE_PORTS_DAEMON=y
-BR2_PACKAGE_PIKSI_DEV_TOOLS=y
-BR2_PACKAGE_COMMON_INIT=y
-BR2_PACKAGE_PROCPS_NG=y
-BR2_PACKAGE_STARLING_DAEMON=y
-BR2_PACKAGE_LOGROTATE=y
-BR2_PACKAGE_CMPH=y
-BR2_PACKAGE_BCM_WRAPPER=y
 BR2_PACKAGE_QUERY_CONFIG=y
+BR2_PACKAGE_OTA_DAEMON=y
 BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_RESOURCE_MONITOR=y
-BR2_PACKAGE_NTFS_3G=y
-BR2_PACKAGE_NTFS_3G_NTFSPROGS=y
+BR2_PACKAGE_PFW_WELCOME=y
+BR2_PACKAGE_SAMPLE_DAEMON=y
+BR2_PACKAGE_PIKSI_DEV_TOOLS=y
