make: build variant core makefile updates [ESD-1085] [4/7]
core makefile updates to support build variants

--- a/scripts/Dockerfile.sdk
+++ b/scripts/Dockerfile.sdk
@@ -50,10 +50,8 @@ RUN \
     .
 
 RUN \
-  echo '>>> Fetching binary artifacts...' && \
-  make firmware && \
   echo '>>> Building SDK image...' && \
-  make image-sdk && \
+  make VARIANT=sdk image && \
   echo '>>> Done!'
 
 # vim: ft=dockerfile:
