package makefiles: build variant updates [ESD-1085] [5/7]
Package makefiles get to simplify under the build variants regime
because they don't have to carry around the logic around wether they're
being built.

S3 based packages are simplified since they don't have to download
from S3 themselves.

The uboot_custom package is an outlier here, it need to gain logic to
generate the "failsafe" package that's included within the release
image (instead of us doing this manually in the top-level make).

--- a/package/piksi_dev_tools/Config.in
+++ b/package/piksi_dev_tools/Config.in
@@ -1,2 +1,7 @@
-config BR2_PIKSI_DEV_TOOLS
+config BR2_PACKAGE_PIKSI_DEV_TOOLS
 	bool "piksi_dev_tools"
+	select BR2_PACKAGE_DROPBEAR
+	select BR2_PACKAGE_STRESS
+	select BR2_PACKAGE_STRACE
+	select BR2_PACKAGE_HOST_LLVM_VANILLA
+	select BR2_PACKAGE_BLACKMAGIC
