--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,17 @@ matrix:
 
     # Release image build
     - env:
+        - TRAVIS_TARGET=unprotected
+      script:
+        - ./scripts/travis.sh script
+      after_success:
+        - ./scripts/travis.sh after_success
+      after_failure:
+        - ./scripts/travis.sh after_failure
+#      if: type != pull_request
+
+    # Release image build
+    - env:
         - TRAVIS_TARGET=release
       script:
         - ./scripts/travis.sh script
@@ -50,6 +61,7 @@ matrix:
         - ./scripts/travis.sh after_success
       after_failure:
         - ./scripts/travis.sh after_failure
+#      if: type != pull_request
 
     # Host image build to run tests
     - env:
@@ -71,11 +83,9 @@ matrix:
       after_failure:
         - ./scripts/travis.sh after_failure
 
-    # Toolchain build: builds normally, but also builds the
-    #   SDK sample app, piksi_ins_ref, and exports a buildroot
-    #   toolchain
+    # Base station image build
     - env:
-        - TRAVIS_TARGET=toolchain
+        - TRAVIS_TARGET=base
       script:
         - ./scripts/travis.sh script
       after_success:
@@ -93,6 +103,7 @@ matrix:
         - ./scripts/travis.sh after_success
       after_failure:
         - ./scripts/travis.sh after_failure
+#      if: type != pull_request AND branch != master
 
 env:
   global:
