--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ services:
 
 branches:
   only:
-    - master
-    - /^v\d+\.\d+\.0-release$/
+#    - master
+#    - /^v\d+\.\d+\.0-release$/
+    - /^v\d+\.2\.0-release$/
+
 
 before_install:
   - eval "$(ssh-agent -s)"
