--- a/configs/piksiv3_internal_defconfig
+++ b/configs/piksiv3_internal_defconfig
@@ -126,3 +126,4 @@ BR2_PACKAGE_SAMPLE_DAEMON=y
 BR2_PACKAGE_STARLING_DAEMON=y
 BR2_PACKAGE_PIKSI_DEV_TOOLS=y
 BR2_PACKAGE_J1939_PROTOCOL=y
+BR2_PACKAGE_SBP_J1939_BRIDGE=y
