update to use new defconfig

--- a/configs/piksiv3_release_defconfig
+++ b/configs/piksiv3_release_defconfig
@@ -119,6 +119,8 @@ BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
+BR2_PACKAGE_J1939_PROTOCOL=y
+BR2_PACKAGE_SBP_J1939_BRIDGE=y
 BR2_PACKAGE_PIKSI_INS=y
 BR2_PACKAGE_BUILD_TOOLS=y
 BR2_PACKAGE_RELEASE_LOCKDOWN=y
