--- a/configs/piksiv3_sdk_defconfig
+++ b/configs/piksiv3_sdk_defconfig
@@ -119,5 +119,7 @@ BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
+BR2_PACKAGE_J1939_PROTOCOL=y
+BR2_PACKAGE_SBP_J1939_BRIDGE=y
 BR2_PACKAGE_SAMPLE_DAEMON=y
 BR2_PACKAGE_PIKSI_DEV_TOOLS=y
