Enable debug symbols in all/most external packages

--- a/package/sbp_cli/src/Makefile
+++ b/package/sbp_cli/src/Makefile
@@ -7,7 +7,7 @@ SBP_CMD_RESP_SOURCES=sbp_cmd_resp.c
 TARGETS=$(SBP_LOG_TARGET) $(SBP_CMD_RESP_TARGET)
 
 LIBS=-luv -lsbp -lpiksi -lsettings
-CFLAGS=-std=gnu11
+CFLAGS=-std=gnu11 -ggdb3
 
 CROSS=
 
