--- a/package/libnetwork/src/Makefile
+++ b/package/libnetwork/src/Makefile
@@ -1,6 +1,6 @@
 TARGET=libnetwork
 SOURCES=libnetwork.c
-CFLAGS=-std=gnu11 -fPIC -Wmissing-prototypes -Wimplicit -Wshadow -Wswitch-default -Wswitch-enum -Wundef -Wuninitialized -Wpointer-arith -Wstrict-prototypes -Wcast-align -Wformat=2 -Wimplicit-function-declaration -Wredundant-decls -Wformat-security -Wall -Wextra -Wno-strict-prototypes -Werror
+CFLAGS=-std=gnu11 -fPIC -Wmissing-prototypes -Wimplicit -Wshadow -Wswitch-default -Wswitch-enum -Wundef -Wuninitialized -Wpointer-arith -Wstrict-prototypes -Wcast-align -Wformat=2 -Wimplicit-function-declaration -Wredundant-decls -Wformat-security -Wall -Wextra -Wno-strict-prototypes -Werror -ggdb3
 ARFLAGS=rcs $(LTO_PLUGIN)
 LDFLAGS=-shared
 
