--- a/package/nmea_protocol/src/Makefile
+++ b/package/nmea_protocol/src/Makefile
@@ -1,6 +1,6 @@
 TARGET=libnmea_protocol
 SOURCES=info_nmea.c
-CFLAGS=-std=gnu11 -fPIC
+CFLAGS=-std=gnu11 -fPIC -ggdb3
 ARFLAGS=rcs $(LTO_PLUGIN)
 LDFLAGS=-shared
 
