--- a/package/rtcm3_in_protocol/src/Makefile
+++ b/package/rtcm3_in_protocol/src/Makefile
@@ -1,6 +1,6 @@
 TARGET=librtcm3_in_protocol
 SOURCES=info_rtcm3_in.c framer_rtcm3_in.c
-CFLAGS+=-std=gnu11 -fPIC
+CFLAGS+=-std=gnu11 -fPIC -ggdb3
 ARFLAGS=rcs $(LTO_PLUGIN)
 LDFLAGS=-shared
 
