--- a/package/sbp_rtcm3_bridge/src/Makefile
+++ b/package/sbp_rtcm3_bridge/src/Makefile
@@ -4,7 +4,7 @@ LIBS=-luv -lsbp -lpiksi -lgnss_converters -lsettings
 CFLAGS=-std=gnu11 -Wmissing-prototypes -Wimplicit -Wshadow -Wswitch-default \
  -Wswitch-enum -Wundef -Wuninitialized -Wpointer-arith -Wstrict-prototypes \
  -Wcast-align -Wformat=2 -Wimplicit-function-declaration -Wredundant-decls \
- -Wformat-security -Wall -Wextra -Wno-strict-prototypes -Werror -ggdb
+ -Wformat-security -Wall -Wextra -Wno-strict-prototypes -Werror -ggdb3
 
 CROSS=
 
