address review comments

--- a/package/j1939_protocol/src/Makefile
+++ b/package/j1939_protocol/src/Makefile
@@ -1,6 +1,6 @@
 TARGET=libj1939_protocol
 SOURCES=info_j1939.c framer_j1939.c
-CFLAGS+=-std=gnu11 -fPIC
+CFLAGS+=-std=gnu11 -fPIC -ggdb3
 ARFLAGS=rcs $(LTO_PLUGIN)
 LDFLAGS=-shared
 
