--- a/package/sbp_j1939_bridge/src/Makefile
+++ b/package/sbp_j1939_bridge/src/Makefile
@@ -1,7 +1,7 @@
 TARGET=sbp_j1939_bridge
 SOURCES= sbp_j1939_bridge.c sbp.c
 LIBS=-luv -lsbp -lpiksi -lsettings
-CFLAGS=-std=gnu11 -Wmissing-prototypes -Wimplicit -Wshadow -Wswitch-default -Wswitch-enum -Wundef -Wuninitialized -Wpointer-arith -Wstrict-prototypes -Wcast-align -Wformat=2 -Wimplicit-function-declaration -Wredundant-decls -Wformat-security -Wall -Wextra -Wno-strict-prototypes -Werror -ggdb
+CFLAGS=-std=gnu11 -Wmissing-prototypes -Wimplicit -Wshadow -Wswitch-default -Wswitch-enum -Wundef -Wuninitialized -Wpointer-arith -Wstrict-prototypes -Wcast-align -Wformat=2 -Wimplicit-function-declaration -Wredundant-decls -Wformat-security -Wall -Wextra -Wno-strict-prototypes -Werror -ggdb3
 
 CROSS=
 
