--- a/configs/piksiv3_internal_defconfig
+++ b/configs/piksiv3_internal_defconfig
@@ -117,6 +117,8 @@ BR2_PACKAGE_OTA_DAEMON=y
 BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_PFW_WELCOME=y
+BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
 BR2_PACKAGE_PIKSI_INS=y
 BR2_PACKAGE_BUILD_TOOLS=y
 BR2_PACKAGE_PIKSI_INS_REF=y
