--- a/Config.in
+++ b/Config.in
@@ -63,3 +63,4 @@ source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/bcm_wrapper/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/j1939_protocol/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/sbp_j1939_bridge/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/anpp_protocol/Config.in"
+source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/sbp_anpp_bridge/Config.in"
