update smoothpose router too

--- a/package/sbp_protocol/src/sbp_router_smoothpose.yml
+++ b/package/sbp_protocol/src/sbp_router_smoothpose.yml
@@ -259,3 +259,11 @@ ports:
           - { action: ACCEPT, prefix: [0x55, 0x06, 0x7F] } # MSG_LINUX_PROCESS_FD_COUNT
           - { action: ACCEPT, prefix: [0x55, 0x07, 0x7F] } # MSG_LINUX_PROCESS_FD_SUMMARY
           - { action: REJECT }
+  - name: SBP_PORT_HEADING_FORWARD
+    metric: "sbp/heading_forward"
+    pub_addr: "ipc:///var/run/sockets/heading_forward.pub"
+    sub_addr: "ipc:///var/run/sockets/heading_forward.sub"
+    forwarding_rules:
+      - dst_port: SBP_PORT_EXTERNAL
+        filters:
+          - { action: ACCEPT }
