Add CONFIG_E1000E=y back into linux.config

--- a/board/piksiv3/linux.config
+++ b/board/piksiv3/linux.config
@@ -98,6 +98,7 @@ CONFIG_NETDEVICES=y
 CONFIG_MACB=y
 # CONFIG_NET_VENDOR_CIRRUS is not set
 # CONFIG_NET_VENDOR_FARADAY is not set
+CONFIG_E1000E=y
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 # CONFIG_NET_VENDOR_MICROCHIP is not set
